WP.org Themes: Prevent thumbnail flicker in Chrome.
This was removed from the wp-admin theme-install screen in [core31316].

Fixes #917.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@1413 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-themes/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-themes/style.css
@@ -231,6 +231,7 @@ ul, ol {
 	left: 0;
 	position: absolute;
 	top: 0;
+	-webkit-transform: translateZ( 0 );
 	-webkit-transition: opacity 0.2s ease-in-out;
 	transition:         opacity 0.2s ease-in-out;
 	width: 100%;
